# template-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  build_and_deploy.yml  cicd.yml  deploy.yaml  deploy.yml  test.yml  test_build_release.yml
charts-repo/: app-1.0.5-dev.1.fix-bug-in-versi.408379d5.tgz  app-1.0.5-dev.2.fix-bug-in-versi.b0c4f9f2.tgz  app-1.0.5-dev.2.main.e037ce4c.tgz  app-1.0.5-dev.3.feature-add-prom.37083329.tgz  app-1.0.5-dev.4.feature-add-prom.d669b3b5.tgz  app-1.0.6.tgz  app-2.0.11-dev.1.fix-pull-tags-in.881d7bd8.tgz  app-2.0.11-dev.2.fix-pull-tags-in.001b34fb.tgz  app-2.0.11-dev.2.main.8702428c.tgz  app-2.0.11-dev.5.fix-pull-tags-in.60988d76.tgz  app-2.0.2.tgz  app-2.0.3.tgz  app-2.0.4.tgz  app-3.0.0-dev.13.main.1c285edb.tgz  app-3.0.0-dev.3.main.3bc2de5b.tgz  app-3.0.0-dev.4.main.efa0c5ce.tgz  app-3.0.0-dev.5.main.82d8d6f1.tgz  app-3.0.0.tgz  index.yaml
charts/app/: Chart.yaml  values.yaml
helm-charts/: app-3.0.0-dev.16.feature-github-d.6c577a15.tgz  app-3.0.0-dev.17.feature-github-d.93f71d3d.tgz  app-3.0.0-dev.17.main.1c999cc4.tgz  app-3.0.0-dev.18.fix-bug-in-build.1151cf56.tgz  app-3.0.0-dev.19.fix-bug-in-build.c49e9b1a.tgz  app-3.0.0-dev.19.main.52b2737a.tgz  app-3.0.0-dev.22.main.ade38c3e.tgz  app-3.0.0-dev.23.main.c9de3540.tgz  index.yaml
tools/: version.sh
