[tool.poetry]
name = "template-python"
version = "0.1.0"
description = "Web service template in Python for reuse"
license = "MIT"
readme = "README.md"
authors = ["Vladimir Gladkii <Vladimir.Gladki@hiro-microdatacenters.nl>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109"
uvicorn = "^0.26"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6"
black = "23.12.1"
flake8 = "7.0.0"
isort = "5.13.2"
mypy = "1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
httpx = "^0.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.mypy]
python_version = '3.12'
